tests/ui/higher-ranked/subtype/hr-subtype.bound_inv_a_b_vs_bound_inv_a.stderr
error[E0308]: mismatched types
  --> $DIR/hr-subtype.rs:54:13
   |
LL | / macro_rules! check {
LL | |     ($rev:ident: ($t1:ty, $t2:ty)) => {
LL | |         #[cfg($rev)]
LL | |         fn subtype<'x, 'y: 'x, 'z: 'y>() {
...  |
LL | |             gimme::<$t1>(None::<$t2>);
   | |             ^^^^^^^^^^^^^^^^^^^^^^^^^ one type is more general than the other
...  |
LL | |     };
LL | | }
   | |_- in this expansion of `check!`
...
LL | / check! { bound_inv_a_b_vs_bound_inv_a: (for<'a,'b> fn(Inv<'a>, Inv<'b>),
LL | | for<'a>    fn(Inv<'a>, Inv<'a>)) }
   | |__________________________________- in this macro invocation
   |
   = note: expected enum `Option<for<'a, 'b> fn(Inv<'a>, Inv<'b>)>`
              found enum `Option<for<'a> fn(Inv<'a>, Inv<'a>)>`

error[E0308]: mismatched types
  --> $DIR/hr-subtype.rs:54:13
   |
LL | / macro_rules! check {
LL | |     ($rev:ident: ($t1:ty, $t2:ty)) => {
LL | |         #[cfg($rev)]
LL | |         fn subtype<'x, 'y: 'x, 'z: 'y>() {
...  |
LL | |             gimme::<$t1>(None::<$t2>);
   | |             ^^^^^^^^^^^^^^^^^^^^^^^^^ one type is more general than the other
...  |
LL | |     };
LL | | }
   | |_- in this expansion of `check!`
...
LL | / check! { bound_inv_a_b_vs_bound_inv_a: (for<'a,'b> fn(Inv<'a>, Inv<'b>),
LL | | for<'a>    fn(Inv<'a>, Inv<'a>)) }
   | |__________________________________- in this macro invocation
   |
   = note: expected enum `Option<for<'a, 'b> fn(Inv<'a>, Inv<'b>)>`
              found enum `Option<for<'a> fn(Inv<'a>, Inv<'a>)>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
